[gd_scene load_steps=18 format=2]

[ext_resource path="res://images/placeholders/white.png" type="Texture" id=1]
[ext_resource path="res://fonts/BebasNeue Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/characters/Player.gd" type="Script" id=3]
[ext_resource path="res://images/spritesheets/spritesheet_retina.png" type="Texture" id=4]
[ext_resource path="res://images/ui/effect_shotLarge - Copy.png" type="Texture" id=5]
[ext_resource path="res://images/characters/green empty body.png" type="Texture" id=6]
[ext_resource path="res://src/behavior/Gravity.tscn" type="PackedScene" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.1502, 10.2035 )

[sub_resource type="Animation" id=3]
resource_name = "attack_swing"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/WeaponArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 55.7273, 17.9124 ), Vector2( -37.5623, -58.5423 ), Vector2( 57.7285, 15.6959 ), Vector2( 57.7285, 15.6959 ), Vector2( 55.7273, 17.9124 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/WeaponArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0, 120.0, 120.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/FreeArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -45.4409, -14.5754 ), Vector2( 44.5586, 23.8396 ), Vector2( -50.9811, -25.6557 ), Vector2( -50.9811, -25.6557 ), Vector2( -45.4409, -14.5754 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Body:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 20.0, 20.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitboxes/SwordHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "climb"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Body/MainBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/WeaponArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 55.7273, 17.9124 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/WeaponArm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FreeArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -45.4409, -14.5754 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Body/MainBody:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hitboxes/SwordHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "grapple_move"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/WeaponArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 55.7273, 17.9124 ), Vector2( -33.8682, 57.8231 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/WeaponArm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -136.57 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FreeArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -45.4409, -14.5754 ), Vector2( -77.2066, 1.71468 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Body:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hitboxes/SwordHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/WeaponArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 55.7273, 17.9124 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/WeaponArm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FreeArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -45.4409, -14.5754 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Body:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hitboxes/SwordHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/WeaponArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 55.7273, 17.9124 ), Vector2( 55.727, 22 ), Vector2( 55.7273, 17.9124 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/WeaponArm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FreeArm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -45.4409, -14.5754 ), Vector2( -45.441, -10 ), Vector2( -45.4409, -14.5754 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Body:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hitboxes/SwordHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" groups=[
"characters",
]]
script = ExtResource( 3 )
color = Color( 0.215686, 0.85098, 0.54902, 1 )

[node name="CenterPivot" type="Position2D" parent="."]

[node name="GrapplingHookLaunchPosition" type="Position2D" parent="CenterPivot"]
position = Vector2( 120, 0 )

[node name="temp" type="Sprite" parent="CenterPivot/GrapplingHookLaunchPosition"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Body" type="Position2D" parent="Sprite"]

[node name="MainBody" type="Sprite" parent="Sprite/Body"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1175, 896, 82, 125 )

[node name="ClimbingBody" type="Sprite" parent="Sprite/Body"]
visible = false
position = Vector2( 0, 1.5 )
texture = ExtResource( 6 )

[node name="RollingBody" type="Sprite" parent="Sprite/Body"]
visible = false
self_modulate = Color( 0.215686, 0.85098, 0.54902, 1 )
position = Vector2( 0, 21.2985 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1040, 1168, 96, 96 )

[node name="WeaponArm" type="Sprite" parent="Sprite"]
position = Vector2( 55.7273, 17.9124 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1328, 179, 32, 30 )

[node name="Weapons" type="Position2D" parent="Sprite/WeaponArm"]
show_behind_parent = true

[node name="Bow" type="Sprite" parent="Sprite/WeaponArm/Weapons"]
visible = false
show_behind_parent = true
position = Vector2( -3.38873, 0.527094 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 928, 1280, 64, 128 )

[node name="Sword" type="Sprite" parent="Sprite/WeaponArm/Weapons"]
show_behind_parent = true
position = Vector2( 2.86395, -54.4149 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 800, 1152, 64, 128 )

[node name="FreeArm" type="Sprite" parent="Sprite"]
position = Vector2( -45.4409, -14.5754 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1328, 179, 32, 30 )

[node name="SideItems" type="Position2D" parent="Sprite/FreeArm"]
show_behind_parent = true

[node name="Shield" type="Sprite" parent="Sprite/FreeArm/SideItems"]
show_behind_parent = true
position = Vector2( -11.0546, 18.9089 )
rotation = -0.224766
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 919, 401, 82, 93 )

[node name="Hitboxes" type="Node2D" parent="."]

[node name="SwordHitbox" type="Area2D" parent="Hitboxes"]
position = Vector2( 103.421, 45.3837 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitboxes/SwordHitbox"]
position = Vector2( -0.767166, -51.6639 )
scale = Vector2( -4.74084, -6.89465 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.44, 5.72 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_swing = SubResource( 3 )
anims/climb = SubResource( 4 )
anims/grapple_move = SubResource( 9 )
anims/idle = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="Name" type="Label" parent="."]
margin_left = -38.23
margin_top = -80.6719
margin_right = 18.77
margin_bottom = -60.6719
custom_fonts/font = SubResource( 7 )
text = "Player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Territory" type="Label" parent="."]
margin_left = 17.9723
margin_top = -80.6386
margin_right = 43.9723
margin_bottom = -60.6386
custom_fonts/font = SubResource( 8 )
text = "(10)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarFrame" type="Sprite" parent="."]
visible = false
position = Vector2( 1.12959, -92.093 )
texture = ExtResource( 5 )
region_rect = Rect2( 1024, 816, 128, 32 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -56.7147
margin_top = -97.9638
margin_right = -24.7147
margin_bottom = -65.9638
rect_scale = Vector2( 3.6, 0.35 )
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.215686, 0.85098, 0.54902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Behavior" type="Node2D" parent="."]

[node name="Gravity" parent="Behavior" instance=ExtResource( 7 )]
enabled = false
[connection signal="body_entered" from="Hitboxes/SwordHitbox" to="." method="_on_SwordHitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
